refactor(file)!: 生产化文件基础能力
- 新增 FileTemplate 与流式文件存储 SPI
- 完善 Local、FTP 和 FTPS 存储实现及资源生命周期
- 强化上传大小、路径边界和 ZIP 解压安全校验
- 统一 FILE 错误码、扩展接口和自动配置
- 更新配置元数据及文件模块使用文档
- 移除旧上传下载服务和虚假存储能力

BREAKING CHANGE: FileStorageProvider 改为 store/open 流式契约，并移除 FileUploadService、FileDownloadService 和 UploadResult